@@ -236,6 +236,8 @@ Bug Fixes
 27. SOLR-991: Better error message when parsing solrconfig.xml fails due to malformed XML. Error message notes the name
     of the file being parsed. (Michael Henson via shalin)
 
+28. SOLR-435: NullPointerException with no query or empty query (ryan, Lars Kotthoff via shalin)
+
 
 Other Changes
 ----------------------
